--- a/express/portfolio/stylesheets/header.scss
+++ b/express/portfolio/stylesheets/header.scss
@@ -1,8 +1,17 @@
 .header{
   position:sticky;
   width:100%;
-
-  background-color: yellow;
   height:100px;
-  margin-bottom: 10px;
+  margin-top:0;
+  margin-bottom: 50px;
+  background-color: black;
+
+  h1{
+
+    margin:unset;
+    padding-top: 10px;
+    color:white;
+  }
+
+
 }
