--- a/express/portfolio/stylesheets/main.scss
+++ b/express/portfolio/stylesheets/main.scss
@@ -6,7 +6,7 @@
 @import "fonts";
 
 body {
-  padding-top: 70px;
-  padding-bottom: 40px;
+  margin:unset;
+  line-height: 22px;
   background-color: #2e3141;
 }
