--- a/express/portfolio/stylesheets/projectDetail.scss
+++ b/express/portfolio/stylesheets/projectDetail.scss
@@ -14,36 +14,40 @@
     width: 100%;
     height:500px;
     background-color: tomato;
-
+position:relative;
     .hero{
       width: 100%;
       height:100%;
+      object-fit:cover;
     }
 
     .overlay{
 
-      position: relative;
-      top:-100%;
-      background-color: black;
+      position: absolute;
+      top:0;
       width: 100%;
       height: 100%;
+      background-color: black;
+
       opacity:.50;
     }
 
     .title{
-
       position: absolute;
-      width:50%;
-      font-size: 30px;
       z-index: 1;
-      left:25%;
-      top:12.5%;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 25%;
 
       text-transform: uppercase;
+      font-size: 30px;
 
       h1{
-            font-size: 40px;
+        display: flex;
+        align-items: center;
+        font-size: 40px;
       }
+
       hr{
         opacity: .25;
       }
